Added typing area, got it working, added random words generator

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -4,7 +4,7 @@
   --bg-1: #FBFDFE;
   --bg-2: #EBEBEB;
   --bg-3: white;
-  --primary: #53A3C1;
+  --primary: #4296b5;
   --secondary: #C59DDD;
   --accent: #CA6DCA;
   --error: #FF4040;
@@ -18,7 +18,7 @@
   --text-2: #fdfdfd;
   --bg-1: #0A171A;;
   --bg-2: #1A2123;
-  --bg-3: #1A2123;
+  --bg-3: black;
   --primary: #53A3C1;
   --secondary: #C59DDD;
   --accent: #CA6DCA;
