--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -1,14 +1,74 @@
 .container {
   border: solid 1px var(--text-1);
   border-radius: var(--border-radius);
-  width: 80%;
-  background-color: var(--bg-3);
+  width: 90%;
+  max-width: 75rem;
+  background-color: var(--bg-1);
   margin: auto;
   margin-top: 10%;
   padding: 2rem 2.5rem;
   font-size: 1.5rem;
-  line-height: 1.8;
-  word-spacing: 2px;
   color: var(--text-1);
-  text-align: center;
+  position: relative;
+  outline: none;
+  transition: all 0.25s ease-out;
+}
+
+.container:not(.container:focus)::before {
+  content: '< Click here to start typing >';
+  color: var(--primary);
+  font-weight: bold;
+  font-size: 1.25rem;
+  position: absolute;
+  border: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: var(--border-radius);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(0.25rem);
+  -webkit-backdrop-filter: blur(0.25rem);
+  transition: all 0.25s ease-out;
+  opacity: 0;
+  animation: fade-in 0.5s ease-out 1s forwards;
+}
+
+.typingIndicator {
+  display: inline-block;
+  height: 2rem;
+  width: 2px;
+  border-radius: 5px;
+  background-color: var(--primary);
+  opacity: 1;
+  animation: typing-indicator 1s linear infinite;
+  animation-delay: 1s;
+}
+
+.words {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+@keyframes typing-indicator {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
