--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   cursor: pointer;
   color: var(--secondary);
   transition: all 0.25s ease-out;
+  transform: rotateY(180deg);
 }
 
 .refreshWrapper button:hover {
