--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -20,6 +20,7 @@
   --bg-2: #1A2123;
   --bg-3: black;
   --primary: #53A3C1;
+  /* --primary: #4296b5; */
   --secondary: #C59DDD;
   --accent: #CA6DCA;
   --error: #FF4040;
