--- a/src/components/typingArea/word.module.css
+++ b/src/components/typingArea/word.module.css
@@ -2,6 +2,7 @@
   letter-spacing: 1px;
   display: flex;
   align-items: center;
+  font-weight: 500;
 }
 
 .rightChar {
@@ -10,4 +11,5 @@
 
 .wrongChar {
   color: var(--error);
+  text-decoration: underline;
 }
