--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   border: solid 1px var(--text-1);
   border-radius: var(--border-radius);
   width: 90%;
@@ -15,7 +16,7 @@
 }
 
 .container:focus {
-  box-shadow: 0px 0px 15px var(--text-1);
+  box-shadow: 0px 0px 10px var(--text-1);
   border: none;
 }
 
@@ -57,6 +58,18 @@
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
+}
+
+.typingStatsWrapper {
+  position: absolute;
+  left: 0;
+  top: -3rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem 1rem;
+  padding: 0.25rem 1rem;
+  font-size: 1.25rem;
+  color: var(--accent);
 }
 
 @keyframes typing-indicator {
