--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -16,7 +16,7 @@
 }
 
 .container:focus {
-  box-shadow: 0px 0px 10px var(--text-1);
+  box-shadow: 0px 0px 5px 0px var(--text-1);
   border: none;
 }
 
