--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -14,7 +14,7 @@
   outline: none;
   transition: all 0.25s ease-out;
 }
-
+/* 
 .container:focus {
   box-shadow: 0px 0px 5px 0px var(--text-1);
   border: none;
@@ -41,7 +41,7 @@
   transition: all 0.25s ease-out;
   opacity: 0;
   animation: fade-in 0.5s ease-out 0.75s forwards;
-}
+} */
 
 .typingIndicator {
   display: inline-block;
@@ -58,6 +58,8 @@
   display: flex;
   gap: 0.5rem;
   flex-wrap: wrap;
+  max-height: 10.5rem;
+  overflow: hidden;
 }
 
 .typingStatsWrapper {
