--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -2,8 +2,7 @@
   position: relative;
   border: solid 1px var(--text-1);
   border-radius: var(--border-radius);
-  width: 90%;
-  max-width: 75rem;
+  max-width: 60rem;
   background-color: var(--bg-1);
   margin: auto;
   margin-top: 10%;
@@ -13,8 +12,10 @@
   position: relative;
   outline: none;
   transition: all 0.25s ease-out;
+  height: 10.5rem;
+  animation: expand 0.5s ease-in-out forwards;
 }
-/* 
+
 .container:focus {
   box-shadow: 0px 0px 5px 0px var(--text-1);
   border: none;
@@ -41,7 +42,7 @@
   transition: all 0.25s ease-out;
   opacity: 0;
   animation: fade-in 0.5s ease-out 0.75s forwards;
-} */
+}
 
 .typingIndicator {
   display: inline-block;
@@ -60,6 +61,7 @@
   flex-wrap: wrap;
   max-height: 10.5rem;
   overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 .typingStatsWrapper {
@@ -89,6 +91,17 @@
   }
 
   to {
+    opacity: 1;
+  }
+}
+
+@keyframes expand {
+  from {
+    /* height: 0; */
+    opacity: 0;
+  }
+  to {
+    /* height: 10.5rem; */
     opacity: 1;
   }
 }
