--- a/src/components/typingResult/style.module.css
+++ b/src/components/typingResult/style.module.css
@@ -2,21 +2,50 @@
   position: relative;
 
 }
-.chart {
+.chartWrapper {
   border: solid 1px var(--text-1);
   border-radius: var(--border-radius);
-  width: 90%;
-  max-width: 75rem;
+  max-width: 45rem;
   background-color: var(--bg-1);
   margin: auto;
   margin-top: auto;
   margin-top: 10%;
-  padding: 2rem 2.5rem;
+  padding: 3rem 1.5rem;
   font-size: 1.5rem;
   color: var(--text-1);
   position: relative;
   outline: none;
   transition: all 0.25s ease-out;
+}
+
+.chart {
+  border-left: solid 1px var(--text-1);
+  border-bottom: solid 1px var(--text-1);
+  width: 100%;
+  height: 10rem;
+  max-width: 40rem;
+  margin: auto;
+  position: relative;
+}
+
+.xAxisItem {
+  position: absolute;
+  font-size: 0.75rem;
+  bottom: -1.25rem;
+}
+
+.yAxisItem {
+  position: absolute;
+  left: -1.25rem;
+  font-size: 0.75rem;
+}
+
+.chartItem {
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--primary);
 }
 
 .stats {
