--- a/src/components/header/modals.style.module.css
+++ b/src/components/header/modals.style.module.css
@@ -1,7 +1,7 @@
 .container {
   border: solid 1px var(--text-1);
   padding: 2rem;
-  color: var(--text-1);
+  color: var(--text-2);
   background: var(--bg-2);
   border-radius: 20px;
 }
@@ -9,6 +9,57 @@
 .container h3 {
   text-align: center;
   color: var(--primary);
+  margin: auto;
   margin-bottom: 1.5rem;
   margin-top: 0;
+  border-bottom: solid 1px;
+  padding-bottom: 1rem;
+  border-color: var(--text-1);
+}
+
+.leaderBoardResults {
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  max-height: 75dvh;
+  max-height: 75vh;
+}
+
+.leaderBoardResult {
+  background: var(--bg-1);
+  padding: 1rem;
+  border-radius: 10px;
+  margin-top: 0;
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.settingsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.settingItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.leaderBoardResultItemTitle {
+  display: block;
+  font-size: 0.75rem;
+  color: var(--accent);
+}
+
+.leaderBoardResultItemResult {
+  color: var(--text-2);
+}
+
+select {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
 }
