Worked on responsive design

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -34,5 +34,12 @@
 @media screen and (max-width: 48rem) {
   :root {
     --component-margin: 5rem;
+    --h1: 24px;
+  }
+}
+@media screen and (max-width: 24rem) {
+  :root {
+    --component-margin: 3rem;
+    --h1: 20px;
   }
 }
