--- a/src/components/header/modals.style.module.css
+++ b/src/components/header/modals.style.module.css
@@ -50,11 +50,29 @@
 .leaderBoardResultItemTitle {
   display: block;
   font-size: 0.75rem;
-  color: var(--accent);
+  color: var(--text-1);
 }
 
 .leaderBoardResultItemResult {
   color: var(--text-2);
+}
+
+.modalHeader {
+  position: relative;
+
+  button {
+    position: absolute;
+    right: 0rem;
+    top: 0rem;
+    border: none;
+    font-weight: bold;
+    font-size: 1.25rem;
+    padding: 0;
+    margin: 0;
+    color: var(--error);
+    cursor: pointer;
+    background-color: transparent;
+  }
 }
 
 select {
@@ -62,4 +80,8 @@ select {
   font-size: 1rem;
   border-radius: 10px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 48rem) {
+
 }
