--- a/src/components/menu/menu.style.module.css
+++ b/src/components/menu/menu.style.module.css
@@ -55,3 +55,24 @@
     transform: translateX(0);
   }
 }
+
+@media screen and (max-width: 48rem) {
+  .container {
+    gap: 0.75rem;
+    padding: 0.4rem 1rem;
+  }
+
+  .menuButton {
+    font-size: 0.9rem;
+    gap: 4px;
+
+    svg {
+      width: 1.1rem;
+      height: 1.1rem;
+    }
+  }
+  .separator {
+    height: 1.1rem;
+    width: 3px;
+  }
+}
