Moved state management of typing area into redux

--- a/src/components/header/modals.style.module.css
+++ b/src/components/header/modals.style.module.css
@@ -21,9 +21,14 @@
 .leaderBoardResults {
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
   height: 70dvh;
   height: 70vh;
+  padding-right: 2px;
+}
+
+.leaderBoardResult:last-child {
+  margin-bottom: 0;
 }
 
 .leaderBoardResult {
